--- a/app/templates/components/new-article.hbs
+++ b/app/templates/components/new-article.hbs
@@ -1,1 +1,39 @@
-{{yield}}
+{{#if addNewArticle}}
+  <div class="">
+    <form>
+      <div class="form-group">
+        <label for="author">Author</label>
+        {{input value=author id="author" class="form-control"}}
+      </div>
+
+      <div class="form-group">
+        <label for="title">Title</label>
+        {{input value=title id="title" class="form-control"}}
+      </div>
+
+      <div class="form-group">
+        <label for="image">Image Address</label>
+        {{input value=image id="image" class="form-control"}}
+      </div>
+
+      <div class="form-group">
+        <label for="body">Body</label>
+        {{textarea cols="80" rows="6" value=body id="body" class="form-control"}}
+      </div>
+
+      <div class="form-group">
+        <label for="category">Category</label>
+        {{input value=category id="category" class="form-control"}}
+      </div>
+
+      <div class="form-group">
+        <label for="date">Date</label>
+        {{input value=date id="date" class="form-control"}}
+      </div>
+
+      <button {{action 'save'}}>Add Article</button>
+    </form>
+  </div>
+{{else}}
+  <button {{action 'articleFormShow'}}>New Article</button>
+{{/if}}
