fix wonky update feature

--- a/app/templates/components/comment-display.hbs
+++ b/app/templates/components/comment-display.hbs
@@ -1,5 +1,4 @@
-<div class="col-sm-6">
-  <p>{{comment.name}}</p>
-  <p>{{comment.email}}</p>
-  <p>{{comment.comment}}</p>
+<div class="col-sm-4">
+  <p>"<em>{{comment.comment}}</em>"</p>
+  <p><strong>{{comment.name}}</strong> — {{comment.email}}</p>
 </div>
